--- a/CeeLearnAndDo/CeeLearnAndDo/Site.Master
+++ b/CeeLearnAndDo/CeeLearnAndDo/Site.Master
@@ -39,7 +39,7 @@
                 </div>
                 <div id="myNav" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="active"><a href="/Default.aspx">Home</a></li>
+                        <li><a href="/Default.aspx">Home</a></li>
                         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Projects
                         <span class="caret"></span></a>
                             <ul class="dropdown-menu">
@@ -57,7 +57,6 @@
         <br />
         <div class="border">
         </div>
-        <br />
         <br />
         <br />
         <div>
