--- a/CeeLearnAndDo/CeeLearnAndDo/Admin/AdminPage.Master
+++ b/CeeLearnAndDo/CeeLearnAndDo/Admin/AdminPage.Master
@@ -45,7 +45,7 @@
 			-->
 
                 <div class="logo">
-                    <a href="/Products.aspx" class="simple-text">CeeLearnAndDo
+                    <a href="/Default.aspx" class="simple-text">CeeLearnAndDo
                     </a>
                 </div>
 
